feat:验证支持本地化

--- a/framework/src/Heal.Domain.Shared/Localization/Heal/en.json
+++ b/framework/src/Heal.Domain.Shared/Localization/Heal/en.json
@@ -1,9 +1,50 @@
-{
+﻿{
   "Culture": "en",
   "Texts": {
     "AppName": "A121",
     "Menu:Home": "Home",
-    "LongWelcomeMessage": "Welcome to the application. This is a startup project based on the ABP framework. For more information visit",
-    "Welcome": "Welcome"
+    "Menu:ContactUs": "Contact Us",
+    "Menu:ArticleSample": "Article Sample",
+    "Home": "Home",
+    "Welcome": "Welcome",
+    "LongWelcomeMessage": "Welcome to this application. This is a startup project based on the ABP framework. For more information, please visit",
+    "Date": "Date",
+    "Permission:Dashboard": "Dashboard",
+    "Menu:Dashboard": "Dashboard",
+    "Menu:HomePage": "Home Page",
+    "Dashboard": "Dashboard",
+    "ExternalProvider:Google": "Google",
+    "ExternalProvider:Google:ClientId": "Client Id",
+    "ExternalProvider:Google:ClientSecret": "Client Secret",
+    "ExternalProvider:Microsoft": "Microsoft",
+    "ExternalProvider:Microsoft:ClientId": "Client Id",
+    "ExternalProvider:Microsoft:ClientSecret": "Client Secret",
+    "ExternalProvider:Twitter": "Twitter",
+    "ExternalProvider:Twitter:ConsumerKey": "Consumer Key",
+    "ExternalProvider:Twitter:ConsumerSecret": "Consumer Secret",
+    "NewsletterHeader": "Subscribe to our newsletter!",
+    "NewsletterInfo": "Stay updated with the latest news.",
+    "NewsletterPreference_Default": "Default Newsletter",
+    "NewsletterPrivacyAcceptMessage": "I accept the <a href='/privacy-policy'>Privacy Policy</a>.",
+    "Language": "Language",
+    "Search": "Search",
+    "LoadMore": "Load More",
+    "Settings": "Settings",
+    "Theme": "Theme",
+    "DeviceTheme": "Device Theme",
+    "Dark": "Dark",
+    "Light": "Light",
+    "Unspecified": "System",
+    "SeeAllUsers": "View All Users",
+    "TakePhoto": "Take Photo",
+    "ChoosePhoto": "Choose Photo",
+    "F:Heal": "Business Module Management",
+    "L:AbpIdentity,Permission:IdentityManagement": "User Module Management",
+    "L:AbpSettingManagement,Permission:SettingManagement": "Configuration Module Management",
+    "L:AbpFeatureManagement,Permission:FeatureManagement": "Feature Module Management",
+    "L:AbpTenantManagement,Permission:TenantManagement": "Tenant Module Management",
+    "Name": "Name",
+    "FieldLengthValidation": "The length of field '{0}' is not within the allowed range. The allowed range is {1}-{2}.",
+    "FieldIsRequired": "The field '{0}' cannot be empty."
   }
 }
