--- a/framework/src/Heal.Domain.Shared/Localization/Heal/en.json
+++ b/framework/src/Heal.Domain.Shared/Localization/Heal/en.json
@@ -44,6 +44,22 @@
     "L:AbpFeatureManagement,Permission:FeatureManagement": "Feature Module Management",
     "L:AbpTenantManagement,Permission:TenantManagement": "Tenant Module Management",
     "Name": "Name",
+    "OrganizationCode": "Organization Code",
+    "Describe": "Description",
+    "ShortName": "Short Name",
+    "Building": "Building",
+    "Floor": "Floor",
+    "RoomNumber": "Room Number",
+    "Address": "Detailed Address",
+    "Phone": "Contact Phone",
+    "Email": "Email Address",
+    "HeadOfCampus": "Campus Director",
+    "HeadOfCampusPhone": "Campus Director's Phone",
+    "HeadOfCampusEmail": "Campus Director's Email",
+    "Website": "Campus Website",
+    "ServicesOffered": "Services Offered",
+    "EmergencyContact": "Emergency Contact",
+    "EmergencyPhone": "Emergency Phone",
     "FieldLengthValidation": "The length of field '{0}' is not within the allowed range. The allowed range is {1}-{2}.",
     "FieldIsRequired": "The field '{0}' cannot be empty."
   }
