--- a/framework/src/Heal.Domain.Shared/Localization/Heal/zh-Hans.json
+++ b/framework/src/Heal.Domain.Shared/Localization/Heal/zh-Hans.json
@@ -44,6 +44,22 @@
     "L:AbpFeatureManagement,Permission:FeatureManagement": "功能模块管理",
     "L:AbpTenantManagement,Permission:TenantManagement": "租户模块管理",
     "Name": "名称",
+    "OrganizationCode": "组织编码",
+    "Describe": "描述",
+    "ShortName": "简称",
+    "Building": "所在大楼",
+    "Floor": "所在楼层",
+    "RoomNumber": "所在房间号",
+    "Address": "所在详细地址",
+    "Phone": "联系电话",
+    "Email": "电子邮箱",
+    "HeadOfCampus": "院区负责人",
+    "HeadOfCampusPhone": "院区负责人电话",
+    "HeadOfCampusEmail": "院区负责人邮箱",
+    "Website": "院区网站",
+    "ServicesOffered": "提供的服务",
+    "EmergencyContact": "紧急联系人",
+    "EmergencyPhone": "紧急联系电话",
     "FieldLengthValidation": "字段 '{0}' 的长度不在允许范围内，允许范围为 {1}-{2}。",
     "FieldIsRequired": "字段 '{0}' 不能为空"
   }
