feat:add per src

--- a/framework/src/Heal.Domain.Shared/Localization/Heal/en.json
+++ b/framework/src/Heal.Domain.Shared/Localization/Heal/en.json
@@ -64,6 +64,7 @@
     "FieldLengthValidation": "The length of field '{0}' is not within the allowed range. The allowed range is {1}-{2}.",
     "FieldIsRequired": "The field '{0}' cannot be empty.",
     "ModuleAlreadyExists": "Module already exists.",
+    "DisplayName:ModuleManagement": "Module Management",
     "DisplayName:Authorization": "Permission Management",
     "DisplayName:RoleManagement": "Role Management",
     "DisplayName:UserManagement": "User Management",
