feat:角色权限功能开发

--- a/framework/src/Heal.Domain.Shared/Localization/Heal/en.json
+++ b/framework/src/Heal.Domain.Shared/Localization/Heal/en.json
@@ -64,23 +64,28 @@
     "FieldLengthValidation": "The length of field '{0}' is not within the allowed range. The allowed range is {1}-{2}.",
     "FieldIsRequired": "The field '{0}' cannot be empty.",
     "ModuleAlreadyExists": "Module already exists.",
-    "DisplayName:ModuleManagement": "Module Management",
-    "DisplayName:Authorization": "Permission Management",
-    "DisplayName:RoleManagement": "Role Management",
-    "DisplayName:UserManagement": "User Management",
-    "DisplayName:MenuManagement": "Menu Management",
-    "DisplayName:OrganizationManagement": "Organization Management",
-    "DisplayName:TenantManagement": "Tenant Management",
-    "DisplayName:AnnouncementManagement": "Announcement Management",
-    "DisplayName:WorkFlowListManagement": "Workflow List Management",
-    "DisplayName:WorkFlowCreateManagement": "Create Workflow",
-    "DisplayName:AgentManagement": "Agent Management",
-    "DisplayName:MerchantManagement": "Merchant Management",
-    "DisplayName:Create": "Create",
-    "DisplayName:Edit": "Edit",
-    "DisplayName:Start": "Start",
-    "DisplayName:Delete": "Delete",
-    "DisplayName:NoPath": "Project path is not maintained",
-    "DisplayName:NoFileType": "Uploaded file type is not supported"
+    "L:Heal,DisplayName:ModuleManagement": "Module Management",
+    "L:Heal,DisplayName:Authorization": "Permission Management",
+    "L:Heal,DisplayName:RoleManagement": "Role Management",
+    "L:Heal,DisplayName:UserManagement": "User Management",
+    "L:Heal,DisplayName:MenuManagement": "Menu Management",
+    "L:Heal,DisplayName:OrganizationManagement": "Organization Management",
+    "L:Heal,DisplayName:TenantManagement": "Tenant Management",
+    "L:Heal,DisplayName:AnnouncementManagement": "Announcement Management",
+    "L:Heal,DisplayName:WorkFlowListManagement": "Workflow List Management",
+    "L:Heal,DisplayName:WorkFlowCreateManagement": "Create Workflow",
+    "L:Heal,DisplayName:AgentManagement": "Agent Management",
+    "L:Heal,DisplayName:MerchantManagement": "Merchant Management",
+    "L:Heal,DisplayName:Create": "Create",
+    "L:Heal,DisplayName:Edit": "Edit",
+    "L:Heal,DisplayName:Start": "Start",
+    "L:Heal,DisplayName:Delete": "Delete",
+    "L:Heal,DisplayName:NoPath": "Project path is not maintained",
+    "L:Heal,DisplayName:NoFileType": "Uploaded file type is not supported",
+    "router.authorization": "Permission Management",
+    "router.role": "Role Management",
+    "router.user": "User Management",
+    "module.module": "Module Management",
+    "menu.menu": "Menu Management"
   }
 }
