--- a/framework/src/Heal.Domain.Shared/Localization/Heal/zh-Hans.json
+++ b/framework/src/Heal.Domain.Shared/Localization/Heal/zh-Hans.json
@@ -64,23 +64,28 @@
     "FieldLengthValidation": "字段 '{0}' 的长度不在允许范围内，允许范围为 {1}-{2}。",
     "FieldIsRequired": "字段 '{0}' 不能为空",
     "ModuleAlreadyExists": "模块已经存在",
-    "DisplayName:Authorization": "权限管理",
-    "DisplayName:ModuleManagement": "模块管理",
-    "DisplayName:RoleManagement": "角色管理",
-    "DisplayName:UserManagement": "用户管理",
-    "DisplayName:MenuManagement": "菜单管理",
-    "DisplayName:OrganizationManagement": "组织管理",
-    "DisplayName:TenantManagement": "租户管理",
-    "DisplayName:AnnouncementManagement": "公告管理",
-    "DisplayName:WorkFlowListManagement": "工作流管理",
-    "DisplayName:WorkFlowCreateManagement": "创建工作流",
-    "DisplayName:AgentManagement": "代理商管理",
-    "DisplayName:MerchantManagement": "商户管理",
-    "DisplayName:Create": "创建",
-    "DisplayName:Edit": "编辑",
-    "DisplayName:Start": "发起",
-    "DisplayName:Delete": "删除",
-    "DisplayName:NoPath": "上传项目路径未维护",
-    "DisplayName:NoFileType": "上传文件类型不支持"
+    "L:Heal,DisplayName:Authorization": "权限管理",
+    "L:Heal,DisplayName:ModuleManagement": "模块管理",
+    "L:Heal,DisplayName:RoleManagement": "角色管理",
+    "L:Heal,DisplayName:UserManagement": "用户管理",
+    "L:Heal,DisplayName:MenuManagement": "菜单管理",
+    "L:Heal,DisplayName:OrganizationManagement": "组织管理",
+    "L:Heal,DisplayName:TenantManagement": "租户管理",
+    "L:Heal,DisplayName:AnnouncementManagement": "公告管理",
+    "L:Heal,DisplayName:WorkFlowListManagement": "工作流管理",
+    "L:Heal,DisplayName:WorkFlowCreateManagement": "创建工作流",
+    "L:Heal,DisplayName:AgentManagement": "代理商管理",
+    "L:Heal,DisplayName:MerchantManagement": "商户管理",
+    "L:Heal,DisplayName:Create": "创建",
+    "L:Heal,DisplayName:Edit": "编辑",
+    "L:Heal,DisplayName:Start": "发起",
+    "L:Heal,DisplayName:Delete": "删除",
+    "L:Heal,DisplayName:NoPath": "上传项目路径未维护",
+    "L:Heal,DisplayName:NoFileType": "上传文件类型不支持",
+    "router.authorization": "权限管理",
+    "router.role": "角色管理",
+    "router.user": "用户管理",
+    "module.module": "模块管理",
+    "menu.menu": "菜单管理"
   }
 }
